@@ -1,5 +1,10 @@
 Please see docs/KNOWN_BUGS file for more information
 
+#testing
+    ipsec.conf parsing should ignore keywords that start with x-
+	they are a form of structured comment.
+    added in forceencaps= keyword.
+
 v2.5.02
     fixed bug in ipsec.conf parser, where it could not read values
        that had = in them (such as base64 encoded keys)
